--- a/PokedexFs/ClientApp/src/components/Globals.css
+++ b/PokedexFs/ClientApp/src/components/Globals.css
@@ -29,3 +29,12 @@
     padding: 0;
     overflow: hidden;
 }
+
+.purpleTheme {
+    color: white;
+    background-color: mediumslateblue;
+}
+
+.borderBox {
+    box-sizing: border-box;
+}
