--- a/PokedexFs/ClientApp/src/components/navbar/NavbarW.css
+++ b/PokedexFs/ClientApp/src/components/navbar/NavbarW.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(4, 25%);
     grid-template-rows: 100%;
     width: 100%;
-    height: 20%;
+    height: 10vh;
 }
 
 .navButton {
@@ -13,8 +13,6 @@
     border: none;
     outline: none;
     transition: 0.15s;
-    color: white;
-    background-color: mediumslateblue;
     width: 100%;
     height: 100%;
 }
